--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,17 @@ aiogram==2.9.2
 python-dotenv==1.0.1
 gunicorn==22.0.0
 uvicorn==0.30.1
+aenum==3.1.15
+aiohttp==3.9.5
+aiosignal==1.3.1
+async-timeout==4.0.3
+attrs==23.2.0
+Babel==2.15.0
+certifi==2024.7.4
+charset-normalizer==3.3.2
+frozenlist==1.4.1
+idna==3.7
+multidict==6.0.5
+requests==2.32.3
+urllib3==2.2.2
+yarl==1.9.4
