--- a/firebase.json
+++ b/firebase.json
@@ -6,8 +6,13 @@
       "**/.*",
       "**/node_modules/**"
     ],
-    "frameworksBackend": {
-      "id": "satvabot"
-    }
+    "rewrites": [
+      {
+        "source": "**",
+        "run": {
+          "serviceId": "satvabot"
+        }
+      }
+    ]
   }
 }
