--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,5 +1,24 @@
 steps:
-- name: 'gcr.io/cloud-builders/docker'
-  args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/satvabot', '.' ]
+  # Шаг 1: Сборка Docker-образа
+  - name: 'gcr.io/cloud-builders/docker'
+    args: ['build', '-t', 'gcr.io/$PROJECT_ID/satvabot:$COMMIT_SHA', '.']
+
+  # Шаг 2: Отправка образа в Google Container Registry
+  - name: 'gcr.io/cloud-builders/docker'
+    args: ['push', 'gcr.io/$PROJECT_ID/satvabot:$COMMIT_SHA']
+
+  # Шаг 3: Развертывание образа в Cloud Run
+  - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+    entrypoint: gcloud
+    args:
+      - 'run'
+      - 'deploy'
+      - 'satvabot'
+      - '--image=gcr.io/$PROJECT_ID/satvabot:$COMMIT_SHA'
+      - '--region=us-central1'
+      - '--platform=managed'
+      - '--allow-unauthenticated'
+      - '--port=8080'
+      - '--set-secrets=BOT_TOKEN=BOT_TOKEN:latest,ADMINS=ADMINS:latest'
 images:
-- 'gcr.io/$PROJECT_ID/satvabot'
+  - 'gcr.io/$PROJECT_ID/satvabot:$COMMIT_SHA'
