modified:   .gcloudignore 	modified:   keyboards/inline/categories.py

--- a/.gcloudignore
+++ b/.gcloudignore
@@ -1,11 +1,20 @@
+# Файл для исключения ненужных файлов при загрузке в Google Cloud.
+
+# Исключаем все "скрытые" файлы и папки
 .gcloudignore
 .gitignore
 .git
 .idea/
 .vscode/
-__pycache__/
-*.pyc
+.idx/
+
+# Исключаем виртуальное окружение Python
 venv/
-.venv/
-# Исключаем локальную базу данных, ее не должно быть в образе
+*.pyc
+__pycache__/
+
+# Исключаем локальную базу данных, если она не должна быть частью образа
 data/database.db
+
+# Файлы зависимостей IDE
+*.iml
