--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -23,4 +23,4 @@ env:
 
 # The command to run to start the server.
 # See https://firebase.google.com/docs/app-hosting/configure#entrypoint
-entrypoint: gunicorn --worker-class uvicorn.workers.UvicornWorker --bind :$PORT app:app
+entrypoint: gunicorn --worker-class aiohttp.worker.GunicornWebWorker --bind :$PORT app:app
